# audio_plugin_hrtf

./: CMakeLists.txt  Notes.md  README.md
src/: main.cpp
src/audio/: hrtf_convolver.cpp  hrtf_convolver.h  noise_generator.cpp  noise_generator.h
src/sofa/: sofa_loader.cpp  sofa_loader.h
